sumo/tests/dfrouter/errors/no_detectors_output/options.dfrouter
--net-file=input_net.net.xml --detector-files=input_detectors.det.xml
